[package]
name = "chronoxide"
version = "0.1.0"
authors = ["Riccardo De Benedictis"]
edition = "2024"
description = "Chronoxide is a high-performance, timeline-based planner built in Rust"
readme = "README.md"
repository = "https://github.com/ratioSolver/Chronoxide"
license-file = "LICENSE.txt"

[features]
default = ["server"]
server = ["dep:axum", "dep:tower-http"]

[[bin]]
name = "server"
path = "src/bin/server.rs"
required-features = ["server"]

[dependencies]
dynamic-ac = { git = "https://github.com/ratioSolver/dynamic-ac" }
consensus = { git = "https://github.com/ratioSolver/Consensus" }
linspire = { git = "https://github.com/ratioSolver/LinSpire" }
riddle = { git = "https://github.com/ratioSolver/RiDDLe", branch = "rust" }
axum = { version = "0.8.8", features = ["ws"], optional = true }
tower-http = { version = "0.6.8", features = ["fs"], optional = true }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
