[package]
name = "chronoxide"
version = "0.1.0"
authors = ["Riccardo De Benedictis"]
edition = "2024"
description = "Chronoxide is a high-performance, timeline-based planner built in Rust"
readme = "README.md"
repository = "https://github.com/ratioSolver/Chronoxide"
license-file = "LICENSE.txt"

[features]
default = ["server"]
server = ["dep:axum", "dep:tower-http"]

[lib]
name = "chronoxide"

[[bin]]
name = "server"
path = "src/bin/server.rs"
required-features = ["server"]

[dependencies]
ac3rm = { git = "https://github.com/pstlab/AC-3rm" }
watchsat = { git = "https://github.com/pstlab/WatchSAT" }
linarith = { git = "https://github.com/pstlab/LinArith" }
riddle = { git = "https://github.com/ratioSolver/RiDDLe", branch = "rust" }
axum = { version = "0.8.9", features = ["ws"], optional = true }
tower-http = { version = "0.6.10", features = ["fs"], optional = true }
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
